# packageScout

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
product/: Dockerfile  python3-packagescout_0.1-1_all.deb  test.py
src/: setup.py  tbuild.sh
src/packageScout/: __init__.py  packageScout.py
